[package]
name = "SolarNFTMarket"
version = "0.1.0"
authors = ["Netwarps"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_primitives = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }
ink_metadata = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }
ink_storage = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }
ink_lang = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }
ink_prelude = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "solar_market"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
