[package]
name = "market"
version = "0.1.0"
authors = ["Netwarps"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_env = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_primitives = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[lib]
crate-type = [
    "cdylib",
    "rlib",
] # Used for ABI generation.
name = "market"
path = "src/lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
