[package]
name = "nft"
version = "3.0.0-rc6"
authors = ["Netwarps"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }
ink_metadata = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }
ink_storage = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }
ink_lang = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }
ink_prelude = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", tag = "v3.0.0-rc6", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "nft"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
