[package]
name = 'pallet-interlaken'
version = '0.1.1'
description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['']
edition = '2021'
license = 'Unlicense'
publish = false
homepage = 'https://github.com/netwarps/solarchain'
repository = 'https://github.com/netwarps/solarchain'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
version = '1.0.129'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
version = '4.0.0-dev'
tag = 'monthly-2021-11-1'

[dependencies.log]
default-features = false
version = '0.4.14'

[dependencies.pallet-nft]
path = "../nft"
version = "0.1.3"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
tag = 'monthly-2021-11-1'

[dependencies.frame-system]
default-features = false
package = "frame-system"
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
tag = 'monthly-2021-11-1'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
tag = 'monthly-2021-11-1'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.pallet-balances]
#default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
tag = 'monthly-2021-11-1'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
tag = 'monthly-2021-11-1'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']