[package]
edition = '2018'
name = 'pallet-nft'
version = '0.1.3'
authors = ['']
license = 'Unlicense'
description = 'An NFT interface and a Substrate FRAME implementation.'
homepage = 'https://github.com/netwarps/solarchain'
repository = 'https://github.com/netwarps/solarchain'
readme = 'README.md'
keywords = ['substrate', 'frame', 'nft', 'blockchain', 'asset']
categories = ['cryptography::cryptocurrencies', 'data-structures', 'no-std']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.116", optional = true }
scale-info={default-features = false,features = ['derive'],version = '1.0'}

# Substrate dependencies
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-support = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "frame-support", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "frame-system", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "sp-runtime", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "sp-std", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "sp-core" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "sp-io" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]
