[package]
name = "pallet-nft-rpc-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# Substrate Dependencies
sp-api = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "sp-api", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "sp-runtime", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",tag = 'monthly-2021-11-1', package = "sp-std", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
]
